PATCH: Corrected spelling mistake and changed debate title alignment

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -203,7 +203,7 @@ div.order-div {
 }
 
 .parallax-container h5 {
-    text-align: center;
+    text-align: left;
 }
 
 .parallax-container .parallax img {
